// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay should render correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <Memo(Pressable)
      onPress={[Function]}
      style={
        {
          "backgroundColor": "#2B1911",
          "height": "100%",
          "left": 0,
          "opacity": 0.4,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      testID="overlay-background"
    />
    <View
      style={
        {
          "alignItems": "center",
          "paddingBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 24,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "marginBottom": 40,
              "marginLeft": 40,
              "marginRight": 40,
              "marginTop": 40,
            },
            {
              "backgroundColor": "#9F8C82",
            },
            {
              "borderRadius": 16,
              "width": "100%",
            },
          ]
        }
        testID="overlay"
      >
        <View
          style={
            [
              {
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
              },
              {
                "backgroundColor": "#FFFCFA",
              },
              {
                "borderTopLeftRadius": 16,
                "borderTopRightRadius": 16,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              },
              {
                "justifyContent": "center",
              },
            ]
          }
        >
          <Memo(Pressable)
            onPress={[Function]}
            style={
              [
                {
                  "paddingBottom": 8,
                  "paddingTop": 8,
                },
                undefined,
              ]
            }
            testID="overlay-action1"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <PeachText
                style={
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 26,
                    },
                    {
                      "color": "#FFFCFA",
                    },
                  ]
                }
              >
                close
              </PeachText>
              <Icon
                color="#FFFCFA"
                id="xSquare"
                style={
                  {
                    "height": 16,
                    "marginLeft": 4,
                    "width": 16,
                  }
                }
              />
            </View>
          </Memo(Pressable)>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Overlay should render correctly with existing, disabled actions and "WARN" level 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <Memo(Pressable)
      onPress={[Function]}
      style={
        {
          "backgroundColor": "#2B1911",
          "height": "100%",
          "left": 0,
          "opacity": 0.4,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      testID="overlay-background"
    />
    <View
      style={
        {
          "alignItems": "center",
          "paddingBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 24,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "marginBottom": 40,
              "marginLeft": 40,
              "marginRight": 40,
              "marginTop": 40,
            },
            {
              "backgroundColor": "#F5CE22",
            },
            {
              "borderRadius": 16,
              "width": "100%",
            },
          ]
        }
        testID="overlay"
      >
        <View
          style={
            [
              {
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
              },
              {
                "backgroundColor": "#FDF6C0",
              },
              {
                "borderTopLeftRadius": 16,
                "borderTopRightRadius": 16,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              },
              {
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <Memo(Pressable)
            onPress={null}
            style={
              [
                {
                  "paddingBottom": 8,
                  "paddingTop": 8,
                },
                {
                  "opacity": 0.7,
                },
              ]
            }
            testID="overlay-action2"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "flexShrink": 1,
                  },
                  {
                    "opacity": 0.5,
                  },
                ]
              }
            >
              <Icon
                color="#2B1911"
                style={
                  {
                    "height": 16,
                    "marginRight": 4,
                    "width": 16,
                  }
                }
              />
              <PeachText
                style={
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 26,
                    },
                    {
                      "color": "#2B1911",
                    },
                  ]
                }
              >
                action2
              </PeachText>
            </View>
          </Memo(Pressable)>
          <Memo(Pressable)
            onPress={null}
            style={
              [
                {
                  "paddingBottom": 8,
                  "paddingTop": 8,
                },
                {
                  "opacity": 0.7,
                },
              ]
            }
            testID="overlay-action1"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "flexShrink": 1,
                  },
                  {
                    "opacity": 0.5,
                  },
                ]
              }
            >
              <PeachText
                style={
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 26,
                    },
                    {
                      "color": "#2B1911",
                    },
                  ]
                }
              >
                action1
              </PeachText>
              <Icon
                color="#2B1911"
                id="testIcon"
                style={
                  {
                    "height": 16,
                    "marginLeft": 4,
                    "width": 16,
                  }
                }
              />
            </View>
          </Memo(Pressable)>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
